Fixed overflow for badge with image

--- a/assets/sass/partials/_navbar.scss
+++ b/assets/sass/partials/_navbar.scss
@@ -128,6 +128,7 @@
       .oa-dropdown {
         margin: 0;
         #user-badge-dropdown {
+          overflow: hidden;
           img {
             width: auto;
             height: 29px;
