--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -13722,7 +13722,11 @@ form .form-actions #modal-content #edit-cancel,
 #oa-navbar .panel-panel .pane-oa-dashboard-oa-user-badge .oa-dropdown {
   margin: 0;
 }
-/* line 131, ../sass/partials/_navbar.scss */
+/* line 130, ../sass/partials/_navbar.scss */
+#oa-navbar .panel-panel .pane-oa-dashboard-oa-user-badge .oa-dropdown #user-badge-dropdown {
+  overflow: hidden;
+}
+/* line 132, ../sass/partials/_navbar.scss */
 #oa-navbar .panel-panel .pane-oa-dashboard-oa-user-badge .oa-dropdown #user-badge-dropdown img {
   width: auto;
   height: 29px;
@@ -13730,12 +13734,12 @@ form .form-actions #modal-content #edit-cancel,
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
-  /* line 146, ../sass/partials/_navbar.scss */
+  /* line 147, ../sass/partials/_navbar.scss */
   #oa-navbar .navbar-inner {
     padding-top: 0;
     padding-bottom: 0;
   }
-  /* line 151, ../sass/partials/_navbar.scss */
+  /* line 152, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb {
     float: none;
     border-bottom: 1px solid #676767;
@@ -13744,23 +13748,23 @@ form .form-actions #modal-content #edit-cancel,
     margin-right: -20px;
     padding: 0 20px;
   }
-  /* line 159, ../sass/partials/_navbar.scss */
+  /* line 160, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-toolbar-search {
     float: left;
   }
 }
 @media (max-width: 767px) {
-  /* line 144, ../sass/partials/_navbar.scss */
+  /* line 145, ../sass/partials/_navbar.scss */
   #oa-navbar {
     padding-left: 20px;
     padding-right: 20px;
   }
-  /* line 167, ../sass/partials/_navbar.scss */
+  /* line 168, ../sass/partials/_navbar.scss */
   #oa-navbar .navbar-inner {
     padding-top: 0;
     padding-bottom: 0;
   }
-  /* line 172, ../sass/partials/_navbar.scss */
+  /* line 173, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb {
     float: none;
     border-bottom: 1px solid #676767;
@@ -13769,48 +13773,48 @@ form .form-actions #modal-content #edit-cancel,
     margin-right: -20px;
     padding: 0 20px;
   }
-  /* line 180, ../sass/partials/_navbar.scss */
+  /* line 181, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-toolbar-search {
     float: left;
   }
 }
 @media (max-width: 480px) {
-  /* line 144, ../sass/partials/_navbar.scss */
+  /* line 145, ../sass/partials/_navbar.scss */
   #oa-navbar {
     position: static;
     margin: 0 -20px;
     padding-left: 0;
     padding-right: 0;
   }
-  /* line 190, ../sass/partials/_navbar.scss */
+  /* line 191, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel {
     margin: 0;
   }
-  /* line 192, ../sass/partials/_navbar.scss */
+  /* line 193, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .panel-pane {
     margin-left: 5px;
   }
-  /* line 195, ../sass/partials/_navbar.scss */
+  /* line 196, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-toolbar-menu-button {
     display: none;
   }
-  /* line 198, ../sass/partials/_navbar.scss */
+  /* line 199, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb {
     margin-left: -20px;
     margin-right: -20px;
   }
-  /* line 202, ../sass/partials/_navbar.scss */
+  /* line 203, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group {
     float: none;
     display: block;
     margin: 0 0 1px;
     position: relative;
   }
-  /* line 207, ../sass/partials/_navbar.scss */
+  /* line 208, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group:after {
     display: none;
   }
-  /* line 210, ../sass/partials/_navbar.scss */
+  /* line 211, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > .btn, #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar form li.btn-group > .button.fake-ok, form #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > .button.fake-ok, #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar form li.btn-group > .button.fake-cancel, form #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > .button.fake-cancel, #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar #media-browser-tabset li.btn-group > a.button, #media-browser-tabset #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > a.button,
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar #media-browser-tabset li.btn-group > input.form-submit,
   #media-browser-tabset #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > input.form-submit, #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar #modal-content li.btn-group > .form-submit, #modal-content #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > .form-submit,
@@ -13819,7 +13823,7 @@ form .form-actions #modal-content #edit-cancel,
     display: block;
     float: none;
   }
-  /* line 214, ../sass/partials/_navbar.scss */
+  /* line 215, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group > .dropdown-toggle {
     position: absolute;
     right: 0;
@@ -13827,31 +13831,31 @@ form .form-actions #modal-content #edit-cancel,
     margin: 0;
     z-index: 100;
   }
-  /* line 221, ../sass/partials/_navbar.scss */
+  /* line 222, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-breadcrumb ul.oa_toolbar li.btn-group .dropdown-menu {
     width: 100%;
   }
-  /* line 227, ../sass/partials/_navbar.scss */
+  /* line 228, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-dashboard-oa-user-badge {
     position: absolute;
     top: 10px;
     left: 10px;
   }
-  /* line 232, ../sass/partials/_navbar.scss */
+  /* line 233, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-toolbar-search {
     margin-left: 0;
   }
-  /* line 235, ../sass/partials/_navbar.scss */
+  /* line 236, ../sass/partials/_navbar.scss */
   #oa-navbar .panel-panel .pane-oa-toolbar-search form .search-text {
     width: 80px;
   }
 }
 
-/* line 248, ../sass/partials/_navbar.scss */
+/* line 249, ../sass/partials/_navbar.scss */
 #oa-responsive-regions-navbar .navbar-inner .btn-top {
   float: left;
 }
-/* line 250, ../sass/partials/_navbar.scss */
+/* line 251, ../sass/partials/_navbar.scss */
 #oa-responsive-regions-navbar .navbar-inner .btn-top.btn-active {
   -webkit-transform: none;
   -moz-transform: none;
